--- a/HCI Cooking/HCI Cooking/Pages/AchievementMenu.xaml
+++ b/HCI Cooking/HCI Cooking/Pages/AchievementMenu.xaml
@@ -6,48 +6,55 @@
              mc:Ignorable="d" 
              d:DesignHeight="700" d:DesignWidth="1000">
     <Grid>
-        <Label Content="Achivements" Height="55" HorizontalAlignment="Left" Margin="150,12,0,0" Name="label1" VerticalAlignment="Top" Width="195" IsEnabled="True" FontSize="30" />
-        <Label Content="Stats" Height="42" HorizontalAlignment="Left" Margin="12,73,0,0" Name="label2" VerticalAlignment="Top" Width="119" FontSize="20" />
-        <Label Content="Badges" FontSize="20" Height="42" HorizontalAlignment="Left" Margin="8,424,0,0" Name="label7" VerticalAlignment="Top" Width="119" />
-        <Border Height="345" HorizontalAlignment="Left" Margin="477,73,0,0" Name="image1" VerticalAlignment="Top" Width="476" />
-        <Label Content="Benny Bassilini" FontSize="30" Height="55" HorizontalAlignment="Left" IsEnabled="True" Margin="477,12,0,0" Name="label8" VerticalAlignment="Top" Width="476" />
-        <Canvas Height="100" HorizontalAlignment="Left" Margin="12,463,0,0" Name="canvas1" VerticalAlignment="Top" Width="321">
-            <Border Canvas.Left="13" Canvas.Top="12" Height="75" Name="image2" Width="75
-                   " />
-            <Label Canvas.Left="94" Canvas.Top="12" Content="I can make Waffles!" Height="28" Name="label9" Width="185" FontWeight="Bold" />
-            <Label Canvas.Left="94" Canvas.Top="35" Content="Learned how to make waffles" Height="52" Name="label10" Width="221" />
-        </Canvas>
-        <Canvas Height="100" Name="canvas2" Width="321" Margin="12,569,667,31">
-            <Border Canvas.Left="13" Canvas.Top="12" Height="75" Name="image3" Width="75                    " />
-            <Label Canvas.Left="94" Canvas.Top="12" Content="I can make Waffles!" FontWeight="Bold" Height="28" Name="label11" Width="185" />
-            <Label Canvas.Left="94" Canvas.Top="35" Content="Learned how to make waffles" Height="52" Name="label12" Width="221" />
-        </Canvas>
-        <Canvas Height="100" Name="canvas3" Width="321" Margin="339,463,340,137">
-            <Border Canvas.Left="13" Canvas.Top="12" Height="75" Name="image4" Width="75                    " />
-            <Label Canvas.Left="94" Canvas.Top="12" Content="I can make Waffles!" FontWeight="Bold" Height="28" Name="label13" Width="185" />
-            <Label Canvas.Left="94" Canvas.Top="35" Content="Learned how to make waffles" Height="52" Name="label14" Width="221" />
-            <Canvas Canvas.Left="328" Canvas.Top="106" Height="100" Name="canvas6" Width="321">
-                <Border Canvas.Left="13" Canvas.Top="12" Height="75" Name="image7" Width="75                    " />
-                <Label Canvas.Left="94" Canvas.Top="12" Content="I can make Waffles!" FontWeight="Bold" Height="28" Name="label19" Width="185" />
-                <Label Canvas.Left="94" Canvas.Top="35" Content="Learned how to make waffles" Height="52" Name="label20" Width="221" />
-            </Canvas>
-        </Canvas>
-        <Canvas Height="100" Name="canvas4" Width="321" Margin="339,569,340,31">
-            <Border Canvas.Left="13" Canvas.Top="12" Height="75" Name="image5" Width="75                    " />
-            <Label Canvas.Left="94" Canvas.Top="12" Content="I can make Waffles!" FontWeight="Bold" Height="28" Name="label15" Width="185" />
-            <Label Canvas.Left="94" Canvas.Top="35" Content="Learned how to make waffles" Height="52" Name="label16" Width="221" />
-        </Canvas>
-        <Canvas Height="100" Name="canvas5" Width="321" Margin="667,463,12,137">
-            <Border Canvas.Left="13" Canvas.Top="12" Height="75" Name="image6" Width="75                    " />
-            <Label Canvas.Left="94" Canvas.Top="12" Content="I can make Waffles!" FontWeight="Bold" Height="28" Name="label17" Width="185" />
-            <Label Canvas.Left="94" Canvas.Top="35" Content="Learned how to make waffles" Height="52" Name="label18" Width="221" />
-        </Canvas>
+        <Label Content="Achivements" Height="55" HorizontalAlignment="Left" Margin="150,12,0,0" Name="lblAchievements" VerticalAlignment="Top" Width="195" IsEnabled="True" FontSize="30" />
+        <Label Content="Stats" Height="42" HorizontalAlignment="Left" Margin="12,73,0,0" Name="lblStats" VerticalAlignment="Top" Width="119" FontSize="20" />
+        <Label Content="Badges" FontSize="20" Height="42" HorizontalAlignment="Left" Margin="12,407,0,0" Name="lblBadges" VerticalAlignment="Top" Width="119" />
+        <Border Height="345" HorizontalAlignment="Left" Margin="477,73,0,0" Name="imgUser" VerticalAlignment="Top" Width="476" />
+        <Label Content="Benny Bassilini" FontSize="30" Height="55" HorizontalAlignment="Left" IsEnabled="True" Margin="477,12,0,0" Name="lblUserName" VerticalAlignment="Top" Width="476" />
+        
+        
         <Button Content="Back" Height="55" HorizontalAlignment="Left" Margin="25,12,0,0" Name="btnAchievementBack" VerticalAlignment="Top" Width="88" Click="btnAchievementBack_Click" />
-        <Canvas Height="171" HorizontalAlignment="Left" Margin="26,121,0,0" Name="canvas7" VerticalAlignment="Top" Width="425" Background="WhiteSmoke">
-            <Label Content="Meals cooked" Height="28" Name="label3" Canvas.Left="22" Canvas.Top="14" />
-            <Label Content="Lessons Learned" Height="28" Name="label4" Canvas.Left="22" Canvas.Top="48" />
-            <Label Content="Tips Taken" Height="28" Name="label5" Canvas.Left="22" Canvas.Top="82" />
-            <Label Content="Badges earned" Height="28" Name="label6" Canvas.Left="22" Canvas.Top="116" />
+
+        <Canvas Height="171" HorizontalAlignment="Left" Margin="26,121,0,0" Name="canvStats" VerticalAlignment="Top" Width="425" Background="WhiteSmoke">
+            <Label FontWeight="Bold" Content="Meals cooked" Height="28" Name="label3" Canvas.Left="22" Canvas.Top="14" />
+            <Label FontWeight="Bold" Content="Lessons Learned" Height="28" Name="label4" Canvas.Left="22" Canvas.Top="48" />
+            <Label FontWeight="Bold" Content="Badges earned" Height="28" Name="label6" Canvas.Left="22" Canvas.Top="82" />
+            <Label Canvas.Left="313" Canvas.Top="82" Content="Label" FontWeight="Bold" Name="lblBadgeStats" />
+            <Label Canvas.Left="313" Canvas.Top="48" Content="Label" FontWeight="Bold" Name="lblLessonStat" />
+            <Label Canvas.Left="313" Canvas.Top="14" Content="Label" FontWeight="Bold" Height="27" Name="lblMealStats" />
+        </Canvas>
+     
+        <Grid Height="216" HorizontalAlignment="Left" Margin="26,455,0,0" Name="grdBadgeHolder" VerticalAlignment="Top" Width="949">
+            <Canvas Height="91" HorizontalAlignment="Left" Margin="14,6,0,0" Name="canvAchieve1" VerticalAlignment="Top" Width="277">
+                <Image Canvas.Left="8" Canvas.Top="6" Height="77" Name="imgAchieve1" Stretch="Fill" Width="88" />
+                <Label FontWeight="Bold" Canvas.Left="110" Canvas.Top="6" Content="Label" Height="28" Name="lblAchieve1" Width="152" />
+                <Label Canvas.Left="110" Canvas.Top="40" Content="Label" Height="28" Name="lblAchieve2" Width="161" />
+            </Canvas>
+            <Canvas Height="91" HorizontalAlignment="Left" Margin="14,111,0,0" Name="canvAchieve2" VerticalAlignment="Top" Width="277">
+                <Image Canvas.Left="8" Canvas.Top="6" Height="77" Name="imgAchieve2" Stretch="Fill" Width="88" />
+                <Label FontWeight="Bold" Canvas.Left="110" Canvas.Top="6" Content="Label" Height="28" Name="lblAchieve3" Width="152" />
+                <Label Canvas.Left="110" Canvas.Top="40" Content="Label" Height="28" Name="lblAchieve4" Width="161" />
+            </Canvas>
+            <Canvas Height="91" HorizontalAlignment="Left" Margin="329,111,0,0" Name="canvAchieve4" VerticalAlignment="Top" Width="277">
+                <Image Canvas.Left="8" Canvas.Top="6" Height="77" Name="imgAchieve4" Stretch="Fill" Width="88" />
+                <Label FontWeight="Bold" Canvas.Left="110" Canvas.Top="6" Content="Label" Height="28" Name="lblAchieve7" Width="152" />
+                <Label Canvas.Left="110" Canvas.Top="40" Content="Label" Height="28" Name="lblAchieve8" Width="161" />
+            </Canvas>
+            <Canvas Height="91" HorizontalAlignment="Left" Margin="634,111,0,0" Name="canvAchieve6" VerticalAlignment="Top" Width="277">
+                <Image Canvas.Left="8" Canvas.Top="6" Height="77" Name="imgAchieve6" Stretch="Fill" Width="88" />
+                <Label FontWeight="Bold" Canvas.Left="110" Canvas.Top="6" Content="Label" Height="28" Name="lblAchieve11" Width="152" />
+                <Label Canvas.Left="110" Canvas.Top="40" Content="Label" Height="28" Name="lblAchieve12" Width="161" />
+            </Canvas>
+        </Grid>
+        <Canvas Height="91" HorizontalAlignment="Left" Margin="355,461,0,0" Name="canvAchieve3" VerticalAlignment="Top" Width="277">
+            <Image Canvas.Left="8" Canvas.Top="6" Height="77" Name="imgAchieve3" Stretch="Fill" Width="88" />
+            <Label FontWeight="Bold" Canvas.Left="110" Canvas.Top="6" Content="Label" Height="28" Name="lblAchieve5" Width="152" />
+            <Label Canvas.Left="110" Canvas.Top="40" Content="Label" Height="28" Name="lblAchieve6" Width="161" />
+        </Canvas>
+        <Canvas Height="91" HorizontalAlignment="Left" Margin="660,461,0,0" Name="canvAchieve5" VerticalAlignment="Top" Width="277">
+            <Image Canvas.Left="8" Canvas.Top="6" Height="77" Name="imgAchieve5" Stretch="Fill" Width="88" />
+            <Label FontWeight="Bold" Canvas.Left="110" Canvas.Top="6" Content="Label" Height="28" Name="lblAchieve9" Width="152" />
+            <Label Canvas.Left="110" Canvas.Top="40" Content="Label" Height="28" Name="lblAchieve10" Width="161" />
         </Canvas>
     </Grid>
 </UserControl>
