--- a/HCI Cooking/HCI Cooking/Pages/CookingLessonWhisking.xaml
+++ b/HCI Cooking/HCI Cooking/Pages/CookingLessonWhisking.xaml
@@ -24,8 +24,8 @@
         </Grid>
         <Rectangle Height="301" HorizontalAlignment="Left" Margin="25,109,0,0" Name="rectVideo" Stroke="Black" VerticalAlignment="Top" Width="579" />
         <Label Content="VIDEO GOES HERE" FontFamily="Leelawadee" FontSize="20" Height="51" HorizontalAlignment="Left" Margin="189,213,0,0" Name="label1" VerticalAlignment="Top" Width="229" />
-        <ProgressBar Height="45" HorizontalAlignment="Left" Margin="41,432,0,0" Name="progressBarWhiskingVid" VerticalAlignment="Top" Width="549" Maximum="1500" />
-        <Label Content="0 / 1500 points"  FontFamily="Leelawadee" FontSize="20" Height="37" HorizontalAlignment="Left" Margin="238,493,0,0" Name="label2" VerticalAlignment="Top" Width="151" />
+        <ProgressBar Height="45" HorizontalAlignment="Left" Margin="41,432,0,0" Name="progressBarWhiskingVid" VerticalAlignment="Top" Width="549" Maximum="1500" Value="800" />
+        <Label Content="800/ 1500 points"  FontFamily="Leelawadee" FontSize="20" Height="37" HorizontalAlignment="Left" Margin="239,493,0,0" Name="label2" VerticalAlignment="Top" Width="151" />
         <Button Content="BACK" Height="53" HorizontalAlignment="Left" Margin="25,594,0,0" Name="btnLesBack" VerticalAlignment="Top" Width="112" Click="btnLesBack_Click" />
     </Grid>
 </UserControl>
