--- a/HCI Cooking/HCI Cooking/Pages/RecipeCompleteSteps.xaml
+++ b/HCI Cooking/HCI Cooking/Pages/RecipeCompleteSteps.xaml
@@ -11,8 +11,8 @@
             <RowDefinition Height="451*" />
             <RowDefinition Height="249*" />
         </Grid.RowDefinitions>
-        <Button Content="Toggle View" Height="48" HorizontalAlignment="Right" Margin="0,12,22,0" Name="btnCompToggleView" VerticalAlignment="Top" Width="81" Background="#FFC1C1FF" Click="btnCompToogleView_Click" />
         <Button Content="Back to Overview" Height="48" HorizontalAlignment="Left" Margin="29,12,0,0" Name="btnRecipeCompBack" VerticalAlignment="Top" Width="125" Click="btnRecipeCompBack_Click" />
         <RichTextBox Height="520" HorizontalAlignment="Left" Margin="81,89,0,0" Name="rTxtBlkSteps" VerticalAlignment="Top" Width="836" IsReadOnly="True" FontSize="36" VerticalScrollBarVisibility="Auto" MaxWidth="836" MaxHeight="555" Grid.RowSpan="2" />
+        <Button Background="#FFC1C1FF" Content="Individual Steps" Height="48" HorizontalAlignment="Left" Margin="832,12,0,0" Name="btnIndivToggleView" VerticalAlignment="Top" Width="133" Click="btnCompToogleView_Click" />
     </Grid>
 </UserControl>
