--- a/HCI Cooking/HCI Cooking/Pages/RecipeOverview.xaml
+++ b/HCI Cooking/HCI Cooking/Pages/RecipeOverview.xaml
@@ -7,27 +7,63 @@
       d:DesignHeight="700" d:DesignWidth="1000">
 
     <Grid Name="grdRecipeOverview">
-        <Border BorderBrush="White" BorderThickness="5" Background="#FFBF7CA6" Height="264" HorizontalAlignment="Left" Margin="594,12,0,0" Name="imgRecipePreview" VerticalAlignment="Top" Width="385" />
+        <Border BorderBrush="White" BorderThickness="5" Background="#FFBF7CA6" Height="264" HorizontalAlignment="Left" Margin="594,12,0,0" Name="imgRecipePreview" VerticalAlignment="Top" Width="385">
+            <Image Height="250" Name="imgRecOverview" Stretch="Fill" Width="370" />
+        </Border>
         <Button Content="Start Cooking" FontFamily="Leelawadee" FontSize="24" Height="94" HorizontalAlignment="Left" Margin="666,535,0,0" Name="btnStartCooking" VerticalAlignment="Top" Width="294" Click="btnStartCooking_Click" />
-        <TextBlock Height="147" HorizontalAlignment="Left" Margin="18,69,0,0" Name="txtBlkIngred" Text="Ingredients:" FontSize="20" VerticalAlignment="Top" Width="556" Background="#FFE2E2E2" />
-        <TextBlock Height="150" HorizontalAlignment="Left" Margin="18,231,0,0" Name="txtBlkTools" Text="Tools Required:" FontSize="20" VerticalAlignment="Top" Width="251" Background="#FFF2ECEC" />
-        <Grid Height="251" HorizontalAlignment="Left" Margin="18,397,0,0" Name="grdSkillsNeeded" VerticalAlignment="Top" Width="478" Background="#FFF3FBCE">
-            <Label Content="Skills Needed" FontFamily="Leelawadee" FontSize="18" Height="34" HorizontalAlignment="Left" Margin="6,6,0,0" Name="lblSkillsNeed" VerticalAlignment="Top" Width="255" />
-            <Border Height="40" HorizontalAlignment="Left" Margin="22,46,0,0" Name="imgMixing" VerticalAlignment="Top" Width="46" />
-            <Border Height="40" HorizontalAlignment="Left" Margin="22,92,0,0" Name="imgDecorating" VerticalAlignment="Top" Width="46" />
-            <Border Height="40" HorizontalAlignment="Left" Margin="22,138,0,0" Name="imgFolding" VerticalAlignment="Top" Width="46" />
-            <Border Height="40" HorizontalAlignment="Left" Margin="22,184,0,0" Name="imgWhisking" VerticalAlignment="Top" Width="46" />
-            <Label Content="Mixing" FontFamily="Leelawadee" FontSize="20" Height="40" HorizontalAlignment="Left" Margin="83,46,0,0" Name="lblFolding" VerticalAlignment="Top" Width="238" />
-            <Label Content="Decorating"  FontFamily="Leelawadee" FontSize="20" Height="40" HorizontalAlignment="Left" Margin="83,92,0,0" Name="lblWhisking" VerticalAlignment="Top" Width="238" />
-            <Label Content="Folding"  FontFamily="Leelawadee" FontSize="20" Height="40" HorizontalAlignment="Left" Margin="83,138,0,0" Name="lbl" VerticalAlignment="Top" Width="108" />
-            <Label Content="Whisking"  FontFamily="Leelawadee" FontSize="20" Height="40" HorizontalAlignment="Left" Margin="83,184,0,0" Name="label5" VerticalAlignment="Top" Width="238" />
-            <Button Content="->" Height="27" HorizontalAlignment="Left" Margin="390,52,0,0" Name="btnMixPlay" VerticalAlignment="Top" Width="59" Click="btnMixPlay_Click" />
-            <Button Content="->" Height="27" HorizontalAlignment="Left" Margin="390,98,0,0" Name="btnDecoPlay" VerticalAlignment="Top" Width="59" Click="btnDecoPlay_Click" />
-            <Button Content="->" Height="27" HorizontalAlignment="Left" Margin="390,144,0,0" Name="btnFoldPlay" VerticalAlignment="Top" Width="59" Click="btnFoldPlay_Click" />
-            <Button Content="->" Height="27" HorizontalAlignment="Left" Margin="390,190,0,0" Name="btnWhiskPlay" VerticalAlignment="Top" Width="59" Click="btnWhiskPlay_Click" />
-        </Grid>
+        <RichTextBox VerticalScrollBarVisibility="Auto" Height="147" HorizontalAlignment="Left" Margin="18,69,0,0" Name="rtxtbxIngred" FontSize="20" VerticalAlignment="Top" Width="556" Background="#FFE2E2E2" IsReadOnly="True" />
+        <RichTextBox VerticalScrollBarVisibility="Auto" Height="150" HorizontalAlignment="Left" Margin="18,231,0,0" Name="rtxtBlkTools" FontSize="20" VerticalAlignment="Top" Width="251" Background="#FFF2ECEC" />
         <Button Content="Back" Height="47" HorizontalAlignment="Left" Margin="18,12,0,0" Name="btnRecipeOverviewBack" VerticalAlignment="Top" Width="78" Click="btnRecipeOverviewBack_Click" />
         <Label Content="&lt;title&gt;" Height="54" HorizontalAlignment="Left" Margin="128,9,0,0" Name="lblTitle" VerticalAlignment="Top" Width="419" FontSize="32" />
         <TextBlock Height="185" HorizontalAlignment="Left" Margin="594,291,0,0" Name="txtBlkDescr" Text="" VerticalAlignment="Top" Width="376" FontSize="16" Background="#71FFB4C3" />
+        <ScrollViewer Height="266" HorizontalAlignment="Left" Margin="18,399,0,0" Name="scrollViewer1" VerticalAlignment="Top" Width="478" VerticalScrollBarVisibility="Auto" Background="#FFF3FBCE">
+            <Grid HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Name="grdSkillsNeeded">
+                <Grid Height="55" HorizontalAlignment="Left" Margin="26,35,0,0" Name="grdSkill1" VerticalAlignment="Top" Visibility="Hidden" Width="427">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="61*" />
+                        <ColumnDefinition Width="103*" />
+                        <ColumnDefinition Width="122*" />
+                        <ColumnDefinition Width="93*" />
+                    </Grid.ColumnDefinitions>
+                    <Image Height="40" HorizontalAlignment="Left" Margin="0,9,0,0" Name="imgSkill1" Stretch="Fill" VerticalAlignment="Top" Width="46" />
+                    <Label Content="skill1" FontFamily="Leelawadee" FontSize="20" Grid.ColumnSpan="3" Height="40" HorizontalAlignment="Left" Margin="61,9,0,0" Name="lblSkill1" VerticalAlignment="Top" Width="238" />
+                    <Button Content="-&gt;" Grid.Column="3" Height="27" HorizontalAlignment="Left" Margin="46,15,0,0" Name="btnSkill1" VerticalAlignment="Top" Width="59" />
+                </Grid>
+                <Grid Height="55" HorizontalAlignment="Left" Margin="26,90,0,0" Name="grdSkill2" VerticalAlignment="Top" Visibility="Hidden" Width="427">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="61*" />
+                        <ColumnDefinition Width="103*" />
+                        <ColumnDefinition Width="122*" />
+                        <ColumnDefinition Width="93*" />
+                    </Grid.ColumnDefinitions>
+                    <Label Content="skill2" FontFamily="Leelawadee" FontSize="20" Grid.ColumnSpan="3" Height="40" HorizontalAlignment="Left" Margin="61,9,0,0" Name="lblSkill2" VerticalAlignment="Top" Width="238" />
+                    <Button Content="-&gt;" Grid.Column="3" Height="27" HorizontalAlignment="Left" Margin="46,15,0,0" Name="btnSkill2" VerticalAlignment="Top" Width="59" />
+                    <Image Height="40" HorizontalAlignment="Left" Margin="0,9,0,0" Name="imgSkill2" Stretch="Fill" VerticalAlignment="Top" Width="46" />
+                </Grid>
+                <Grid Height="55" HorizontalAlignment="Left" Margin="26,145,0,0" Name="grdSkill3" VerticalAlignment="Top" Visibility="Hidden" Width="427">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="61*" />
+                        <ColumnDefinition Width="103*" />
+                        <ColumnDefinition Width="122*" />
+                        <ColumnDefinition Width="93*" />
+                    </Grid.ColumnDefinitions>
+                    <Label Content="skill3" FontFamily="Leelawadee" FontSize="20" Grid.ColumnSpan="3" Height="40" HorizontalAlignment="Left" Margin="61,9,0,0" Name="lblSkill3" VerticalAlignment="Top" Width="238" />
+                    <Button Content="-&gt;" Grid.Column="3" Height="27" HorizontalAlignment="Left" Margin="46,15,0,0" Name="btnSkill3" VerticalAlignment="Top" Width="59" />
+                    <Image Height="40" HorizontalAlignment="Left" Margin="0,9,0,0" Name="imgSkill3" Stretch="Fill" VerticalAlignment="Top" Width="46" />
+                </Grid>
+                <Grid Height="55" HorizontalAlignment="Left" Margin="26,200,0,0" Name="grdSkill4" VerticalAlignment="Top" Visibility="Hidden" Width="427">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="61*" />
+                        <ColumnDefinition Width="103*" />
+                        <ColumnDefinition Width="122*" />
+                        <ColumnDefinition Width="93*" />
+                    </Grid.ColumnDefinitions>
+                    <Label Content="skill4" FontFamily="Leelawadee" FontSize="20" Grid.ColumnSpan="3" Height="40" HorizontalAlignment="Left" Margin="61,9,0,0" Name="lblSkill4" VerticalAlignment="Top" Width="238" />
+                    <Button Content="-&gt;" Grid.Column="3" Height="27" HorizontalAlignment="Left" Margin="46,15,0,0" Name="btnSkill4" VerticalAlignment="Top" Width="59" />
+                    <Image Height="40" HorizontalAlignment="Left" Margin="0,9,0,0" Name="imgSkill4" Stretch="Fill" VerticalAlignment="Top" Width="46" />
+                </Grid>
+                <Label Content="Skills Needed" FontFamily="Leelawadee" FontSize="18" Height="34" HorizontalAlignment="Left" Margin="10,10,0,0" Name="lblSkillsNeed" VerticalAlignment="Top" Width="255" />
+            </Grid>
+        </ScrollViewer>
     </Grid>
 </UserControl>
