--- a/HCI Cooking/HCI Cooking/Pages/RecipeSelectionMenu.xaml
+++ b/HCI Cooking/HCI Cooking/Pages/RecipeSelectionMenu.xaml
@@ -18,18 +18,20 @@
                     <CheckBox Content="Glazing" Height="16" HorizontalAlignment="Left" Margin="1,28,0,0" Name="chkbxGlaze" VerticalAlignment="Top" Grid.Column="1" IsChecked="False" />
                 </Grid>
             </Expander>
-            <Expander Header="Baking" Height="120" Name="expBaking" IsExpanded="True">
-                <Grid>
+            <Expander Header="Baking" Height="154" Name="expBaking" IsExpanded="True">
+                <Grid Height="132">
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="26*" />
                     </Grid.ColumnDefinitions>
                     <CheckBox Content="Mixing" Checked="chkbxMixing_Checked" Unchecked="chkbxMixing_Unchecked" Height="16" HorizontalAlignment="Left" Margin="22,6,0,0" Name="chkbxMixing" VerticalAlignment="Top" />
                     <CheckBox Content="Folding" Height="16" HorizontalAlignment="Left" Margin="22,28,0,0" Name="chkbxFolding" VerticalAlignment="Top" />
-                    <CheckBox Content="Decorating" HorizontalAlignment="Left" Margin="22,50,0,31" Name="chkbxDeco" />
-                    <CheckBox Content="Whisking" Height="16" HorizontalAlignment="Left" Margin="22,72,0,0" Name="chkBxWhisking" VerticalAlignment="Top" />
+                    <CheckBox Content="Kneeding" Height="16" HorizontalAlignment="Left" Margin="22,50,0,0" Name="chkBxKneeding" VerticalAlignment="Top" />
+                    <CheckBox Content="Decorating" HorizontalAlignment="Left" Margin="22,72,0,46" Name="chkbxDeco" Width="84" Height="16" />
+                    <CheckBox Content="Whisking" Height="16" HorizontalAlignment="Left" Margin="22,92,0,0" Name="chkBxWhisking" VerticalAlignment="Top" />
+                 
                 </Grid>
             </Expander>
-            <Expander Header="Deep Frying" Height="91" Name="expDeepFry" IsExpanded="True">
+            <Expander Header="Deep Frying" Height="121" Name="expDeepFry" IsExpanded="True">
                 <Grid Height="70">
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="15*" />
@@ -39,35 +41,39 @@
                     <CheckBox Content="Degreasing" Height="16" HorizontalAlignment="Left" Margin="7,28,0,0" Name="chkBxDegrease" VerticalAlignment="Top" Grid.Column="1" />
                 </Grid>
             </Expander>
+            <Expander Header="Saute" Height="87" Name="expSaute" IsExpanded="True">
+                <Grid>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="20*" />
+                    </Grid.ColumnDefinitions>
+                    <CheckBox Content="Deglazing" Height="16" HorizontalAlignment="Left" Margin="19,6,0,0" Name="chkBxDeglaze" VerticalAlignment="Top" Grid.ColumnSpan="3" />
+                </Grid>
+            </Expander>
         </StackPanel>
         <Grid Name="gridRecipeDisplay" Margin="224,12,12,29" Background="#FFD8E4FC">
             <Label Content="RECOMMENDED RECIPES" FontFamily="Leelawadee" FontSize="30" Height="47" HorizontalAlignment="Left" Margin="223,6,0,0" Name="lblRecRecipes" VerticalAlignment="Top" Width="352" />
             <Canvas Height="275" HorizontalAlignment="Left" Margin="18,59,0,0" Name="canvRecipe1" VerticalAlignment="Top" Width="347">
                 <TextBlock Text="Textblock" Canvas.Left="0" Canvas.Top="202" Height="73" Name="txtBlkRecipe1" Width="347" Background="White" />
                 <Border BorderBrush="White" BorderThickness="5" Canvas.Left="0" Canvas.Top="0" Height="187" Name="brdrRecipe1" Width="347" Background="#FFBF7CA6"></Border>
+                <Image Height="177" Name="img1" Stretch="Fill" Width="337" Canvas.Top="5" Canvas.Left="5" />
             </Canvas>
             <Canvas Height="275" HorizontalAlignment="Left" Margin="390,59,0,0" Name="canvRecipe2" VerticalAlignment="Top" Width="347">
                 <TextBlock Canvas.Left="0" Canvas.Top="202" Height="73" Name="txtBlkRecipe2" Text="TextBlock" Width="347" Background="White" Foreground="Black" />
-                <Border BorderBrush="White" BorderThickness="5" Canvas.Left="0" Canvas.Top="0" Height="187" Name="brdrRecipe2" Width="347" Background="#FFBF7CA6" />
+                <Border BorderBrush="White" BorderThickness="5" Canvas.Left="0" Canvas.Top="0" Height="187" Name="brdrRecipe2" Width="347" Background="#FFBF7CA6"></Border>
+                <Image Canvas.Left="5" Canvas.Top="6" Height="177" Name="img2" Stretch="Fill" Width="337" />
             </Canvas>
             <Canvas Height="275" HorizontalAlignment="Left" Margin="18,349,0,0" Name="canvRecipe3" VerticalAlignment="Top" Width="347">
                 <TextBlock Canvas.Left="0" Canvas.Top="202" Height="73" Name="txtBlkRecipe3" Text="TextBlock" Width="347" Background="White" />
                 <Border Background="#FFBF7CA6" BorderBrush="White" BorderThickness="5" Height="187" Name="brdrRecipe3" Width="347" Canvas.Left="0" Canvas.Top="0"></Border>
+                <Image Canvas.Left="5" Canvas.Top="5" Height="177" Name="img3" Stretch="Fill" Width="337" />
             </Canvas>
             <Canvas Height="275" HorizontalAlignment="Left" Margin="390,349,0,0" Name="canvRecipe4" VerticalAlignment="Top" Width="347">
                 <TextBlock Canvas.Left="0" Canvas.Top="202" Height="73" Name="txtBlkRecipe4" Text="TextBlock" Width="347" Background="White"/>
-                <Border Background="#FFBF7CA6" BorderBrush="White" BorderThickness="5" Height="187" Name="brdrRecipe4" Width="347" Canvas.Left="0" Canvas.Top="0" />
+                <Border Background="#FFBF7CA6" BorderBrush="White" BorderThickness="5" Height="187" Name="brdrRecipe4" Width="347" Canvas.Left="0" Canvas.Top="0"></Border>
+                <Image Canvas.Left="5" Canvas.Top="5" Height="177" Name="img4" Stretch="Fill" Width="337" />
             </Canvas>
         </Grid>
         <Button Content="Back" Height="47" HorizontalAlignment="Left" Margin="13,12,0,0" Name="btnRSMBack" VerticalAlignment="Top" Width="75" Click="btnRSMBack_Click" />
-        <Expander Header="Saute" Height="87" Name="expSaute" IsExpanded="True" Margin="13,361,787,252">
-            <Grid>
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="20*" />
-                </Grid.ColumnDefinitions>
-                <CheckBox Content="Deglazing" Height="16" HorizontalAlignment="Left" Margin="19,6,0,0" Name="chkBxDeglaze" VerticalAlignment="Top" Grid.ColumnSpan="3" />
-            </Grid>
-        </Expander>
         <CheckBox Content="All" Height="16" HorizontalAlignment="Left" Margin="169,49,0,0" Name="chkBxAll" VerticalAlignment="Top" Width="44" IsChecked="True" />
     </Grid>
 </UserControl>
