--- a/HCI Cooking/HCI Cooking/Pages/RecipeSelectionMenu.xaml
+++ b/HCI Cooking/HCI Cooking/Pages/RecipeSelectionMenu.xaml
@@ -14,7 +14,7 @@
                         <ColumnDefinition Width="22*" />
                         <ColumnDefinition Width="177*" />
                     </Grid.ColumnDefinitions>
-                    <CheckBox Content="Marinating" HorizontalAlignment="Left" Margin="1,6,0,34" Name="ckbxMarinate" Grid.Column="1" IsChecked="False" />
+                    <CheckBox Content="Marinating" HorizontalAlignment="Left" Margin="1,6,0,34" Name="chkbxMarinate" Grid.Column="1" IsChecked="False" />
                     <CheckBox Content="Glazing" Height="16" HorizontalAlignment="Left" Margin="1,28,0,0" Name="chkbxGlaze" VerticalAlignment="Top" Grid.Column="1" IsChecked="False" />
                 </Grid>
             </Expander>
@@ -23,8 +23,8 @@
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="26*" />
                     </Grid.ColumnDefinitions>
-                    <CheckBox Content="Mixing" Checked="chkbxMixing_Checked" Unchecked="chkbxMixing_Unchecked" Height="16" HorizontalAlignment="Left" Margin="22,6,0,0" Name="chkbxMixing" VerticalAlignment="Top" />
-                    <CheckBox Content="Folding" Height="16" HorizontalAlignment="Left" Margin="22,28,0,0" Name="chkbxFolding" VerticalAlignment="Top" />
+                    <CheckBox Content="Mixing" Height="16" HorizontalAlignment="Left" Margin="22,6,0,0" Name="chkbxMixing" VerticalAlignment="Top" />
+                    <CheckBox Content="Folding" Height="16" HorizontalAlignment="Left" Margin="22,28,0,0" Name="chkbxFolding" VerticalAlignment="Top" IsChecked="False" />
                     <CheckBox Content="Kneeding" Height="16" HorizontalAlignment="Left" Margin="22,50,0,0" Name="chkBxKneeding" VerticalAlignment="Top" />
                     <CheckBox Content="Decorating" HorizontalAlignment="Left" Margin="22,72,0,46" Name="chkbxDeco" Width="84" Height="16" />
                     <CheckBox Content="Whisking" Height="16" HorizontalAlignment="Left" Margin="22,92,0,0" Name="chkBxWhisking" VerticalAlignment="Top" />
@@ -52,28 +52,28 @@
         </StackPanel>
         <Grid Name="gridRecipeDisplay" Margin="224,12,12,29" Background="#FFD8E4FC">
             <Label Content="RECOMMENDED RECIPES" FontFamily="Leelawadee" FontSize="30" Height="47" HorizontalAlignment="Left" Margin="223,6,0,0" Name="lblRecRecipes" VerticalAlignment="Top" Width="352" />
-            <Canvas Height="275" HorizontalAlignment="Left" Margin="18,59,0,0" Name="canvRecipe1" VerticalAlignment="Top" Width="347">
+            <Canvas Height="275" HorizontalAlignment="Left" Margin="18,59,0,0" Name="canvRecipe1" VerticalAlignment="Top" Width="347" Visibility="Hidden">
                 <TextBlock Text="Textblock" Canvas.Left="0" Canvas.Top="202" Height="73" Name="txtBlkRecipe1" Width="347" Background="White" />
                 <Border BorderBrush="White" BorderThickness="5" Canvas.Left="0" Canvas.Top="0" Height="187" Name="brdrRecipe1" Width="347" Background="#FFBF7CA6"></Border>
                 <Image Height="177" Name="img1" Stretch="Fill" Width="337" Canvas.Top="5" Canvas.Left="5" />
             </Canvas>
-            <Canvas Height="275" HorizontalAlignment="Left" Margin="390,59,0,0" Name="canvRecipe2" VerticalAlignment="Top" Width="347">
+            <Canvas Height="275" HorizontalAlignment="Left" Margin="390,59,0,0" Name="canvRecipe2" VerticalAlignment="Top" Width="347" Visibility="Hidden">
                 <TextBlock Canvas.Left="0" Canvas.Top="202" Height="73" Name="txtBlkRecipe2" Text="TextBlock" Width="347" Background="White" Foreground="Black" />
                 <Border BorderBrush="White" BorderThickness="5" Canvas.Left="0" Canvas.Top="0" Height="187" Name="brdrRecipe2" Width="347" Background="#FFBF7CA6"></Border>
                 <Image Canvas.Left="5" Canvas.Top="6" Height="177" Name="img2" Stretch="Fill" Width="337" />
             </Canvas>
-            <Canvas Height="275" HorizontalAlignment="Left" Margin="18,349,0,0" Name="canvRecipe3" VerticalAlignment="Top" Width="347">
+            <Canvas Height="275" HorizontalAlignment="Left" Margin="18,349,0,0" Name="canvRecipe3" VerticalAlignment="Top" Width="347" Visibility="Hidden">
                 <TextBlock Canvas.Left="0" Canvas.Top="202" Height="73" Name="txtBlkRecipe3" Text="TextBlock" Width="347" Background="White" />
                 <Border Background="#FFBF7CA6" BorderBrush="White" BorderThickness="5" Height="187" Name="brdrRecipe3" Width="347" Canvas.Left="0" Canvas.Top="0"></Border>
                 <Image Canvas.Left="5" Canvas.Top="5" Height="177" Name="img3" Stretch="Fill" Width="337" />
             </Canvas>
-            <Canvas Height="275" HorizontalAlignment="Left" Margin="390,349,0,0" Name="canvRecipe4" VerticalAlignment="Top" Width="347">
+            <Canvas Height="275" HorizontalAlignment="Left" Margin="390,349,0,0" Name="canvRecipe4" VerticalAlignment="Top" Width="347" Visibility="Hidden">
                 <TextBlock Canvas.Left="0" Canvas.Top="202" Height="73" Name="txtBlkRecipe4" Text="TextBlock" Width="347" Background="White"/>
                 <Border Background="#FFBF7CA6" BorderBrush="White" BorderThickness="5" Height="187" Name="brdrRecipe4" Width="347" Canvas.Left="0" Canvas.Top="0"></Border>
                 <Image Canvas.Left="5" Canvas.Top="5" Height="177" Name="img4" Stretch="Fill" Width="337" />
             </Canvas>
         </Grid>
         <Button Content="Back" Height="47" HorizontalAlignment="Left" Margin="13,12,0,0" Name="btnRSMBack" VerticalAlignment="Top" Width="75" Click="btnRSMBack_Click" />
-        <CheckBox Content="All" Height="16" HorizontalAlignment="Left" Margin="169,49,0,0" Name="chkBxAll" VerticalAlignment="Top" Width="44" IsChecked="True" />
+        <CheckBox Content="Show All" Height="16" HorizontalAlignment="Left" Margin="141,49,0,0" Name="chkBxAll" VerticalAlignment="Top" Width="70" IsChecked="True" />
     </Grid>
 </UserControl>
