--- a/HCI Cooking/HCI Cooking/Pages/CookingTechniqueLessons.xaml
+++ b/HCI Cooking/HCI Cooking/Pages/CookingTechniqueLessons.xaml
@@ -8,7 +8,7 @@
 
     <Grid Name="grdCTLesson">
         <Label Content="Mango Pudding Cake" FontFamily="Leelawadee" FontSize="34" Height="54" HorizontalAlignment="Left" Margin="12,21,0,0" Name="lblMPCRecipeTitle" VerticalAlignment="Top" Width="391" />
-        <Label Content="LESSON #IV: Folding" FontFamily="Leelawadee" FontSize="16" Height="31" HorizontalAlignment="Left" Margin="41,72,0,0" Name="lblLessonNum" VerticalAlignment="Top" Width="294" />
+        <Label Content="LESSON #III: Folding" FontFamily="Leelawadee" FontSize="16" Height="31" HorizontalAlignment="Left" Margin="41,72,0,0" Name="lblLessonNum" VerticalAlignment="Top" Width="294" />
         <Label Content="How to fold ingredients" FontFamily="Leelawadee" FontSize="28" Height="62" HorizontalAlignment="Right" Margin="0,41,44,0" Name="lblChapOverviewHeader" VerticalAlignment="Top" Width="305" />
         <TextBlock Height="277" HorizontalAlignment="Left" Margin="651,95,0,0" Name="txtBlkChapOverview" Text="Video Chapter Overview" VerticalAlignment="Top" Width="329" Background="#FFE8DFDF" />
         <Grid Height="249" HorizontalAlignment="Left" Margin="651,398,0,0" Name="grdLessonsTable" VerticalAlignment="Top" Width="329" Background="#FFF4F8E2">
