--- a/HCI Cooking/HCI Cooking/Pages/MainMenu.xaml
+++ b/HCI Cooking/HCI Cooking/Pages/MainMenu.xaml
@@ -6,14 +6,9 @@
       mc:Ignorable="d" 
       d:DesignHeight="700" d:DesignWidth="1000">
 
-    <Grid Name="grdMainMenu" Background="#FFB7E3FF">
+    <Grid Name="grdMainMenu" Background="#FFE5E2FF">
         <Button Content="COOKING TECHNIQUES!" FontFamily="Leelawadee" FontSize="24" Height="102" HorizontalAlignment="Left" Margin="69,522,0,0" Name="btnCookingTech" VerticalAlignment="Top" Width="361" Background="White" Click="btnCookingTech_Click" />
         <Button Content="ACHIEVEMENTS" FontFamily="Leelawadee" FontSize="26" Height="104" HorizontalAlignment="Left" Margin="592,520,0,0" Name="btnAchievements" VerticalAlignment="Top" Width="361" Background="White" Click="btnAchievements_Click" />
-        <Border BorderBrush="Silver" BorderThickness="5" Name="brdrTitle" Margin="0,85,0,461" Background="White">
-            <Label Content="Learn To How To Cook Humans!" FontFamily="Helvetica Neue LT Com" FontSize="40" Height="69" Name="lblTitle" Width="558" FontWeight="Normal" />
-        </Border>
-        <Border BorderBrush="White" BorderThickness="5" Height="194" HorizontalAlignment="Left" Margin="55,283,0,0" Name="brdrFoodImg1" VerticalAlignment="Top" Width="264" Background="#FF838383" />
-        <Border Background="#FF838383" BorderBrush="White" BorderThickness="5" Height="194" HorizontalAlignment="Left" Margin="372,283,0,0" Name="brdrFoodImg2" VerticalAlignment="Top" Width="264" />
-        <Border Background="#FF838383" BorderBrush="White" BorderThickness="5" Height="194" HorizontalAlignment="Left" Margin="689,283,0,0" Name="brdrFoodImg3" VerticalAlignment="Top" Width="264" />
+        <Image Height="500" HorizontalAlignment="Left" Margin="136,12,0,0" Name="imgTitleScreen" Stretch="Fill" VerticalAlignment="Top" Width="713" />
     </Grid>
 </UserControl>
