--- a/HCI Cooking/HCI Cooking/Pages/RecipeCompleteSteps.xaml
+++ b/HCI Cooking/HCI Cooking/Pages/RecipeCompleteSteps.xaml
@@ -6,7 +6,7 @@
       mc:Ignorable="d" 
       d:DesignHeight="700" d:DesignWidth="1000">
 
-    <Grid Name="grdRCompSteps">
+    <Grid Name="grdRCompSteps" Background="#81D8E4FC">
         <Grid.RowDefinitions>
             <RowDefinition Height="451*" />
             <RowDefinition Height="249*" />
