--- a/HCI Cooking/HCI Cooking/Pages/RecipeSelectionMenu.xaml
+++ b/HCI Cooking/HCI Cooking/Pages/RecipeSelectionMenu.xaml
@@ -58,22 +58,26 @@
             <Label Content="RECOMMENDED RECIPES" FontFamily="Leelawadee" FontSize="30" Height="47" HorizontalAlignment="Left" Margin="223,6,0,0" Name="lblRecRecipes" VerticalAlignment="Top" Width="352" />
             <Canvas Height="275" HorizontalAlignment="Left" Margin="18,59,0,0" Name="canvRecipe1" VerticalAlignment="Top" Width="347" Visibility="Hidden">
                 <Border BorderBrush="White" BorderThickness="5" Canvas.Left="0" Canvas.Top="0" Height="275" Name="brdrRecipe1" Width="347" Background="#FFBF7CA6"></Border>
-                <TextBlock Text="Textblock" Canvas.Left="5" Canvas.Top="182" Height="89" Name="txtBlkRecipe1" Width="337" Background="White" />
+                <Label Content="Label" Height="28" Name="lblRecipe1" Canvas.Left="5" Width="338" Canvas.Top="182" Background="White" FontFamily="Aharoni" FontSize="18" />
+                <TextBlock Text="Textblock" Canvas.Left="5" Canvas.Top="206" Height="64" Name="txtBlkRecipe1" Width="338" Background="White" />
                 <Image Height="177" Name="img1" Stretch="Fill" Width="337" Canvas.Top="5" Canvas.Left="5" />
             </Canvas>
             <Canvas Height="275" HorizontalAlignment="Left" Margin="390,59,0,0" Name="canvRecipe2" VerticalAlignment="Top" Width="347" Visibility="Hidden">
                 <Border BorderBrush="White" BorderThickness="5" Canvas.Left="0" Canvas.Top="0" Height="275" Name="brdrRecipe2" Width="347" Background="#FFBF7CA6"></Border>
-                <TextBlock Canvas.Left="5" Canvas.Top="182" Height="89" Name="txtBlkRecipe2" Text="TextBlock" Width="337" Background="White" Foreground="Black" />
+                <Label Canvas.Left="5" Canvas.Top="182" Content="Label" Height="28" Name="lblRecipe2" Width="338" Background="White" FontFamily="Aharoni" FontSize="18" />
+                <TextBlock Canvas.Left="5" Canvas.Top="206" Height="64" Name="txtBlkRecipe2" Text="TextBlock" Width="338" Background="White" Foreground="Black" />
                 <Image Canvas.Left="5" Canvas.Top="6" Height="177" Name="img2" Stretch="Fill" Width="337" />
             </Canvas>
             <Canvas Height="275" HorizontalAlignment="Left" Margin="18,349,0,0" Name="canvRecipe3" VerticalAlignment="Top" Width="347" Visibility="Hidden" Grid.RowSpan="2">
                 <Border Background="#FFBF7CA6" BorderBrush="White" BorderThickness="5" Height="275" Name="brdrRecipe3" Width="347" Canvas.Left="0" Canvas.Top="0"></Border>
-                <TextBlock Canvas.Left="5" Canvas.Top="181" Height="89" Name="txtBlkRecipe3" Text="TextBlock" Width="337" Background="White" />
+                <Label Canvas.Left="5" Canvas.Top="182" Content="Label" Height="28" Name="lblRecipe3" Width="338" Background="White" FontFamily="Aharoni" FontSize="18" />
+                <TextBlock Canvas.Left="5" Canvas.Top="206" Height="64" Name="txtBlkRecipe3" Text="TextBlock" Width="338" Background="White" />
                 <Image Canvas.Left="5" Canvas.Top="5" Height="177" Name="img3" Stretch="Fill" Width="337" />
             </Canvas>
             <Canvas Height="275" HorizontalAlignment="Left" Margin="390,349,0,0" Name="canvRecipe4" VerticalAlignment="Top" Width="347" Visibility="Hidden" Grid.RowSpan="2">
                 <Border Background="#FFBF7CA6" BorderBrush="White" BorderThickness="5" Height="275" Name="brdrRecipe4" Width="347" Canvas.Left="0" Canvas.Top="0"></Border>
-                <TextBlock Canvas.Left="5" Canvas.Top="182" Height="89" Name="txtBlkRecipe4" Text="TextBlock" Width="337" Background="White"/>
+                <Label Canvas.Left="5" Canvas.Top="182" Content="Label" Height="28" Name="lblRecipe4" Width="338" Background="White" FontFamily="Aharoni" FontSize="18" />
+                <TextBlock Canvas.Left="5" Canvas.Top="206" Height="64" Name="txtBlkRecipe4" Text="TextBlock" Width="338" Background="White"/>
                 <Image Canvas.Left="5" Canvas.Top="5" Height="177" Name="img4" Stretch="Fill" Width="337" />
             </Canvas>
         </Grid>
