--- a/HCI Cooking/HCI Cooking/Pages/RecipeCompleteSteps.xaml
+++ b/HCI Cooking/HCI Cooking/Pages/RecipeCompleteSteps.xaml
@@ -12,7 +12,8 @@
             <RowDefinition Height="249*" />
         </Grid.RowDefinitions>
         <Button Content="Back to Overview" Height="48" HorizontalAlignment="Left" Margin="29,12,0,0" Name="btnRecipeCompBack" VerticalAlignment="Top" Width="125" Click="btnRecipeCompBack_Click" />
-        <RichTextBox Height="520" HorizontalAlignment="Left" Margin="81,89,0,0" Name="rTxtBlkSteps" VerticalAlignment="Top" Width="836" IsReadOnly="True" FontSize="36" VerticalScrollBarVisibility="Auto" MaxWidth="836" MaxHeight="555" Grid.RowSpan="2" />
+        <RichTextBox Height="520" HorizontalAlignment="Left" Margin="81,89,0,0" Name="rTxtBlkSteps" VerticalAlignment="Top" Width="836" IsReadOnly="True" FontSize="20" VerticalScrollBarVisibility="Auto" MaxWidth="836" MaxHeight="555" Grid.RowSpan="2" />
         <Button Background="#FFC1C1FF" Content="Individual Steps" Height="48" HorizontalAlignment="Left" Margin="832,12,0,0" Name="btnIndivToggleView" VerticalAlignment="Top" Width="133" Click="btnCompToogleView_Click" />
+        <Label Content="Label" Height="57" HorizontalAlignment="Left" Margin="190,12,0,0" Name="lblTitle" VerticalAlignment="Top" Width="515" FontFamily="Aharoni" FontSize="40" />
     </Grid>
 </UserControl>
