Steam achievmeent ripoff implemented
After final step

Bugs:
-Does not load the achivment image and content
-Steps still show 9/9 instead of 10/10 (missing final step to say
complete)

--- a/HCI Cooking/HCI Cooking/Pages/RecipeIndividualSteps.xaml
+++ b/HCI Cooking/HCI Cooking/Pages/RecipeIndividualSteps.xaml
@@ -17,5 +17,10 @@
         </Canvas>
         <ProgressBar Height="30" HorizontalAlignment="Left" Margin="203,597,0,0" Name="progBar" VerticalAlignment="Top" Width="588" />
         <Label Content="Steps 1/1" Height="28" HorizontalAlignment="Left" Margin="446,628,0,0" Name="lblProg" VerticalAlignment="Top" Width="72" />
+        <Canvas Height="103" HorizontalAlignment="Left" Margin="689,597,0,0" Name="canvAchievement" VerticalAlignment="Top" Width="311" Background="#FF0A8EFF" Opacity="0">
+            <Label Canvas.Left="6" Canvas.Top="6" Content="New Achievment!" Height="24" Name="lblAchievement" FontStyle="Normal" FontSize="18" Width="208" FontFamily="Aharoni" />
+            <Image Canvas.Left="14" Canvas.Top="31" Height="62" Name="imgAchievement" Stretch="Fill" Width="61" />
+            <Label Canvas.Left="81" Canvas.Top="31" Height="62" Name="lblAchievementContent" Width="215" />
+        </Canvas>
     </Grid>
 </UserControl>
