--- a/HCI Cooking/HCI Cooking/Pages/AchievementMenu.xaml
+++ b/HCI Cooking/HCI Cooking/Pages/AchievementMenu.xaml
@@ -6,14 +6,14 @@
              mc:Ignorable="d" 
              d:DesignHeight="700" d:DesignWidth="1000">
     <Grid Background="#81D8E4FC">
-        <Label Content="Achivements" Height="55" HorizontalAlignment="Left" Margin="150,12,0,0" Name="lblAchievements" VerticalAlignment="Top" Width="195" IsEnabled="True" FontSize="30" />
+        <Label Content="Achivements" Height="55" HorizontalAlignment="Left" Margin="150,12,0,0" Name="lblAchievements" VerticalAlignment="Top" Width="195" IsEnabled="True" FontSize="30" FontFamily="Leelawadee" />
         <Label Content="Stats" Height="42" HorizontalAlignment="Left" Margin="12,73,0,0" Name="lblStats" VerticalAlignment="Top" Width="119" FontSize="20" />
         <Label Content="Badges" FontSize="20" Height="42" HorizontalAlignment="Left" Margin="12,407,0,0" Name="lblBadges" VerticalAlignment="Top" Width="119" />
         <Image Height="345" HorizontalAlignment="Left" Margin="477,73,0,0" Name="imgUser" VerticalAlignment="Top" Width="476" />
-        <Label Content="Benny Bassilini" FontSize="30" Height="55" HorizontalAlignment="Left" IsEnabled="True" Margin="477,12,0,0" Name="lblUserName" VerticalAlignment="Top" Width="476" />
+        <Label Content="Benny Bassilini" FontSize="30" Height="55" HorizontalAlignment="Left" IsEnabled="True" Margin="477,12,0,0" Name="lblUserName" VerticalAlignment="Top" Width="476" FontFamily="Leelawadee" />
         
         
-        <Button Content="Back" Height="55" HorizontalAlignment="Left" Margin="25,12,0,0" Name="btnAchievementBack" VerticalAlignment="Top" Width="88" Click="btnAchievementBack_Click" />
+        <Button Content="Back" Height="55" HorizontalAlignment="Left" Margin="25,12,0,0" Name="btnAchievementBack" VerticalAlignment="Top" Width="88" Click="btnAchievementBack_Click" FontFamily="Century Gothic" FontSize="16" />
 
         <Canvas Height="171" HorizontalAlignment="Left" Margin="26,121,0,0" Name="canvStats" VerticalAlignment="Top" Width="425" Background="White">
             <Label FontWeight="Bold" Content="Meals cooked" Height="28" Name="label3" Canvas.Left="22" Canvas.Top="14" />
