--- a/HCI Cooking/HCI Cooking/Pages/CookingLessonTemplate.xaml
+++ b/HCI Cooking/HCI Cooking/Pages/CookingLessonTemplate.xaml
@@ -7,6 +7,7 @@
       d:DesignHeight="700" d:DesignWidth="1000" Background="#81D8E4FC">
 
     <Grid Name="grdNILesson">
+        <Image Height="353" HorizontalAlignment="Left" Margin="25,109,0,0" Name="imgVidPlaceholder" Stretch="Fill" VerticalAlignment="Top" Width="579" ToolTip="Video feature not yet implemented." />
         <Label Content="Recipe Title" FontFamily="Leelawadee" FontSize="34" Height="54" HorizontalAlignment="Left" Margin="12,21,0,0" Name="lblRecipeTitle" VerticalAlignment="Top" Width="391" />
         <Label Content="LESSON NUMBER" FontFamily="Leelawadee" FontSize="16" Height="31" HorizontalAlignment="Left" Margin="41,72,0,0" Name="lblLessonNumNI" VerticalAlignment="Top" Width="294" />
         <Label Content="NOT IMPLEMENTED" FontFamily="Leelawadee" FontSize="28" Height="48" HorizontalAlignment="Left" Margin="631,41,0,0" Name="lblChapOverviewHeaderNI" VerticalAlignment="Top" Width="327" />
@@ -22,11 +23,9 @@
             <Label Content="Not Implemented" FontFamily="Leelawadee" FontSize="20" Height="45" HorizontalAlignment="Left" Margin="85,146,0,0" Name="lblLessonIIINI" VerticalAlignment="Top" Width="180" />
             <Label Content="Not Implemented"  FontFamily="Leelawadee" FontSize="20" Height="45" HorizontalAlignment="Left" Margin="85,0,0,6" Name="lblLessonIVNI" VerticalAlignment="Bottom" Width="211" />
         </Grid>
-        <Rectangle Height="301" HorizontalAlignment="Left" Margin="25,109,0,0" Name="rectVideo" Stroke="Black" VerticalAlignment="Top" Width="579" />
-        <Label Content="VIDEO GOES HERE" FontFamily="Leelawadee" FontSize="20" Height="51" HorizontalAlignment="Left" Margin="189,213,0,0" Name="lblNI1" VerticalAlignment="Top" Width="229" />
-        <ProgressBar Height="45" HorizontalAlignment="Left" Margin="41,432,0,0" Name="progressBarNIVid" VerticalAlignment="Top" Width="549" Maximum="1500" Value="0" />
+        <ProgressBar Height="45" HorizontalAlignment="Left" Margin="41,488,0,0" Name="progressBarNIVid" VerticalAlignment="Top" Width="549" Maximum="1500" Value="0" />
         <Label Content="0/ 1500 points"  FontFamily="Leelawadee" FontSize="20" Height="37" HorizontalAlignment="Left" Margin="239,493,0,0" Name="lblProgressBarNI" VerticalAlignment="Top" Width="151" />
-        <Button Content="BACK" Height="53" HorizontalAlignment="Left" Margin="25,594,0,0" Name="btnLesBack" VerticalAlignment="Top" Width="112" Click="btnLesBack_Click" />
+        <Button Content="Back" Height="53" HorizontalAlignment="Left" Margin="25,594,0,0" Name="btnLesBack" VerticalAlignment="Top" Width="112" Click="btnLesBack_Click" FontFamily="Century Gothic" FontSize="16" />
     </Grid>
 </UserControl>
 
