--- a/HCI Cooking/HCI Cooking/Pages/RecipeSelectionMenu.xaml
+++ b/HCI Cooking/HCI Cooking/Pages/RecipeSelectionMenu.xaml
@@ -51,18 +51,22 @@
             </Expander>
         </StackPanel>
         <Grid Name="gridRecipeDisplay" Margin="224,12,12,29" Background="#81D8E4FC">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="382*" />
+                <ColumnDefinition Width="382*" />
+            </Grid.ColumnDefinitions>
             <Grid.RowDefinitions>
                 <RowDefinition Height="357*" />
                 <RowDefinition Height="302*" />
             </Grid.RowDefinitions>
-            <Label Content="RECOMMENDED RECIPES" FontFamily="Leelawadee" FontSize="30" Height="47" HorizontalAlignment="Left" Margin="223,6,0,0" Name="lblRecRecipes" VerticalAlignment="Top" Width="352" />
+            <Label Content="RECIPE SELECTION" FontFamily="Century Gothic" FontSize="30" Height="47" HorizontalAlignment="Left" Margin="194,6,0,0" Name="lblRecRecipes" VerticalAlignment="Top" Width="376" HorizontalContentAlignment="Center" Grid.ColumnSpan="2" />
             <Canvas Height="275" HorizontalAlignment="Left" Margin="18,59,0,0" Name="canvRecipe1" VerticalAlignment="Top" Width="347" Visibility="Hidden">
                 <Border BorderBrush="White" BorderThickness="5" Canvas.Left="0" Canvas.Top="0" Height="275" Name="brdrRecipe1" Width="347" Background="#FFBF7CA6"></Border>
                 <Label Content="Label" Height="28" Name="lblRecipe1" Canvas.Left="5" Width="338" Canvas.Top="182" Background="White" FontFamily="Aharoni" FontSize="18" />
                 <TextBlock Text="Textblock" Canvas.Left="5" Canvas.Top="206" Height="64" Name="txtBlkRecipe1" Width="338" Background="White" />
                 <Image Height="177" Name="img1" Stretch="Fill" Width="337" Canvas.Top="5" Canvas.Left="5" />
             </Canvas>
-            <Canvas Height="275" HorizontalAlignment="Left" Margin="390,59,0,0" Name="canvRecipe2" VerticalAlignment="Top" Width="347" Visibility="Hidden">
+            <Canvas Height="275" HorizontalAlignment="Left" Margin="8,59,0,0" Name="canvRecipe2" VerticalAlignment="Top" Width="347" Visibility="Hidden" Grid.Column="1">
                 <Border BorderBrush="White" BorderThickness="5" Canvas.Left="0" Canvas.Top="0" Height="275" Name="brdrRecipe2" Width="347" Background="#FFBF7CA6"></Border>
                 <Label Canvas.Left="5" Canvas.Top="182" Content="Label" Height="28" Name="lblRecipe2" Width="338" Background="White" FontFamily="Aharoni" FontSize="18" />
                 <TextBlock Canvas.Left="5" Canvas.Top="206" Height="64" Name="txtBlkRecipe2" Text="TextBlock" Width="338" Background="White" Foreground="Black" />
@@ -74,14 +78,14 @@
                 <TextBlock Canvas.Left="5" Canvas.Top="206" Height="64" Name="txtBlkRecipe3" Text="TextBlock" Width="338" Background="White" />
                 <Image Canvas.Left="5" Canvas.Top="5" Height="177" Name="img3" Stretch="Fill" Width="337" />
             </Canvas>
-            <Canvas Height="275" HorizontalAlignment="Left" Margin="390,349,0,0" Name="canvRecipe4" VerticalAlignment="Top" Width="347" Visibility="Hidden" Grid.RowSpan="2">
+            <Canvas Height="275" HorizontalAlignment="Left" Margin="8,349,0,0" Name="canvRecipe4" VerticalAlignment="Top" Width="347" Visibility="Hidden" Grid.RowSpan="2" Grid.Column="1">
                 <Border Background="#FFBF7CA6" BorderBrush="White" BorderThickness="5" Height="275" Name="brdrRecipe4" Width="347" Canvas.Left="0" Canvas.Top="0"></Border>
                 <Label Canvas.Left="5" Canvas.Top="182" Content="Label" Height="28" Name="lblRecipe4" Width="338" Background="White" FontFamily="Aharoni" FontSize="18" />
                 <TextBlock Canvas.Left="5" Canvas.Top="206" Height="64" Name="txtBlkRecipe4" Text="TextBlock" Width="338" Background="White"/>
                 <Image Canvas.Left="5" Canvas.Top="5" Height="177" Name="img4" Stretch="Fill" Width="337" />
             </Canvas>
         </Grid>
-        <Button Content="Back" Height="47" HorizontalAlignment="Left" Margin="13,12,0,0" Name="btnRSMBack" VerticalAlignment="Top" Width="75" Click="btnRSMBack_Click" />
+        <Button Content="Back" Height="47" HorizontalAlignment="Left" Margin="13,12,0,0" Name="btnRSMBack" VerticalAlignment="Top" Width="75" Click="btnRSMBack_Click" FontFamily="Century Gothic" FontSize="16" FontWeight="Normal" />
         <CheckBox Content="Show All" Height="16" HorizontalAlignment="Left" Margin="141,49,0,0" Name="chkBxAll" VerticalAlignment="Top" Width="70" IsChecked="True" />
     </Grid>
 </UserControl>
