--- a/HCI Cooking/HCI Cooking/Pages/CookingLessonFolding.xaml
+++ b/HCI Cooking/HCI Cooking/Pages/CookingLessonFolding.xaml
@@ -10,9 +10,9 @@
         <Image Height="353" HorizontalAlignment="Left" Margin="25,109,0,0" Name="imgVidPlaceholder" Stretch="Fill" VerticalAlignment="Top" Width="579" ToolTip="Video feature not yet implemented." />
         <Label Content="Mango Pudding Cake" FontFamily="Leelawadee" FontSize="34" Height="54" HorizontalAlignment="Left" Margin="12,21,0,0" Name="lblMPCRecipeTitle" VerticalAlignment="Top" Width="391" />
         <Label Content="LESSON #III: Folding" FontFamily="Leelawadee" FontSize="16" Height="31" HorizontalAlignment="Left" Margin="41,72,0,0" Name="lblLessonNum" VerticalAlignment="Top" Width="294" />
-        <Label Content="How to fold ingredients" FontFamily="Leelawadee" FontSize="28" Height="62" HorizontalAlignment="Right" Margin="0,41,44,0" Name="lblChapOverviewHeader" VerticalAlignment="Top" Width="305" />
-        <TextBlock Height="272" HorizontalAlignment="Left" Margin="651,95,0,0" Name="txtBlkChapOverview" Text="Video Chapter Overview" VerticalAlignment="Top" Width="329" Background="#FFFDFDFD" />
-        <Grid Height="269" HorizontalAlignment="Left" Margin="651,410,0,0" Name="grdLessonsTable" VerticalAlignment="Top" Width="329" Background="#FFF4F8E2">
+        <Label Content="How to fold ingredients" FontFamily="Leelawadee" FontSize="28" Height="48" HorizontalAlignment="Right" Margin="0,41,44,0" Name="lblChapOverviewHeader" VerticalAlignment="Top" Width="327" />
+        <TextBlock Height="266" HorizontalAlignment="Left" Margin="651,95,0,0" Name="txtBlkChapOverview" Text="Video Chapter Overview" VerticalAlignment="Top" Width="329" Background="#FFFDFDFD" />
+        <Grid Height="275" HorizontalAlignment="Left" Margin="651,410,0,0" Name="grdLessonsTable" VerticalAlignment="Top" Width="329" Background="#FFF4F8E2">
             <Grid Height="53" HorizontalAlignment="Left" Margin="14,25,0,0" Name="grdLessonI" VerticalAlignment="Top" Width="307" Visibility="Hidden">
                 <Image Name="imgLessonI" Margin="10,6,258,0" Height="36" Width="40" VerticalAlignment="Top" Visibility="Visible" />
                 <Label Content="Mixing" FontFamily="Leelawadee" FontSize="20" Height="36" HorizontalAlignment="Left" Margin="67,6,0,0" Name="lblLessonI" VerticalAlignment="Top" Width="116" Visibility="Visible" />
@@ -37,6 +37,6 @@
         <ProgressBar Height="45" HorizontalAlignment="Left" Margin="41,488,0,0" Name="progressBar1" VerticalAlignment="Top" Width="549" />
         <Label Content="         0 / 1500 points"  FontFamily="Leelawadee" FontSize="20" Height="37" HorizontalAlignment="Left" Margin="176,493,0,0" Name="label2" VerticalAlignment="Top" Width="259" />
         <Button Content="Back" Height="53" HorizontalAlignment="Left" Margin="25,594,0,0" Name="btnLesBack" VerticalAlignment="Top" Width="112" Click="btnLesBack_Click" FontFamily="Century Gothic" FontSize="16" />
-        <Label Content="Lessons:" Height="28" HorizontalAlignment="Left" Margin="651,382,0,0" Name="lblLessonHeader" VerticalAlignment="Top" FontSize="16" />
+        <Label Content="Lessons:" Height="43" HorizontalAlignment="Left" Margin="651,377,0,0" Name="lblLessonHeader" VerticalAlignment="Top" FontSize="20" FontFamily="Leelawadee" />
     </Grid>
 </UserControl>
