--- a/HCI Cooking/HCI Cooking/Pages/CookingLessonWhisking.xaml
+++ b/HCI Cooking/HCI Cooking/Pages/CookingLessonWhisking.xaml
@@ -13,23 +13,23 @@
         <Label Content="How to whisk ingredients" FontFamily="Leelawadee" FontSize="28" Height="48" HorizontalAlignment="Left" Margin="631,41,0,0" Name="lblChapOverviewHeader" VerticalAlignment="Top" Width="327" />
         <TextBlock Height="266" HorizontalAlignment="Left" Margin="651,95,0,0" Name="txtBlkChapOverview" Text="Video Chapter Overview" VerticalAlignment="Top" Width="329" Background="#FFFDFDFD" />
 
-        <Grid Height="275" HorizontalAlignment="Left" Margin="651,404,0,0" Name="grdLessonsTable" VerticalAlignment="Top" Width="329" Background="#FFF4F8E2">
-            <Grid Height="53" HorizontalAlignment="Left" Margin="14,37,0,0" Name="grdLessonI" VerticalAlignment="Top" Width="307" Visibility="Hidden">
+        <Grid Height="275" HorizontalAlignment="Left" Margin="651,410,0,0" Name="grdLessonsTable" VerticalAlignment="Top" Width="329" Background="#FFF4F8E2">
+            <Grid Height="53" HorizontalAlignment="Left" Margin="14,25,0,0" Name="grdLessonI" VerticalAlignment="Top" Width="307" Visibility="Hidden">
                 <Image Name="imgLessonI" Margin="10,6,258,0" Height="36" Width="40" VerticalAlignment="Top" />
                 <Label Content="Mixing" FontFamily="Leelawadee" FontSize="20" Height="36" HorizontalAlignment="Left" Margin="67,6,0,0" Name="lblLessonI" VerticalAlignment="Top" Width="116" />
                 <Button Content="-&gt;" Height="23" HorizontalAlignment="Left" Margin="218,14,0,0" Name="btnLessonI" VerticalAlignment="Top" Width="75" />
             </Grid>
-            <Grid Height="50" HorizontalAlignment="Left" Margin="14,95,0,0" Name="grdLessonII" VerticalAlignment="Top" Width="307" Visibility="Hidden">
+            <Grid Height="50" HorizontalAlignment="Left" Margin="14,83,0,0" Name="grdLessonII" VerticalAlignment="Top" Width="307" Visibility="Hidden">
                 <Image Name="imgLessonII" Margin="10,8,257,0" Height="36" Width="40" VerticalAlignment="Top" />
                 <Label Content="Decorating" FontFamily="Leelawadee" FontSize="20" Height="36" HorizontalAlignment="Left" Margin="71,6,0,0" Name="lblLessonII" VerticalAlignment="Top" Width="147" />
                 <Button Content="-&gt;" Height="23" HorizontalAlignment="Left" Margin="218,14,0,0" Name="btnLessonII" VerticalAlignment="Top" Width="75" />
             </Grid>
-            <Grid Height="51" HorizontalAlignment="Left" Margin="14,149,0,0" Name="grdLessonIII" VerticalAlignment="Top" Width="307" Visibility="Hidden">
+            <Grid Height="51" HorizontalAlignment="Left" Margin="14,139,0,0" Name="grdLessonIII" VerticalAlignment="Top" Width="307" Visibility="Hidden">
                 <Image Name="imgLessonIII" Margin="10,6,257,0" Height="36" VerticalAlignment="Top" />
                 <Label Content="Folding" FontFamily="Leelawadee" FontSize="20" Height="36" HorizontalAlignment="Right" Margin="0,6,120,0" Name="lblLessonIII" VerticalAlignment="Top" Width="116" />
                 <Button Content="-&gt;" Height="23" HorizontalAlignment="Left" Margin="218,14,0,0" Name="btnLessonIII" VerticalAlignment="Top" Width="75" />
             </Grid>
-            <Grid Height="53" HorizontalAlignment="Left" Margin="14,206,0,0" Name="grdLessonIV" VerticalAlignment="Top" Width="307" Visibility="Hidden">
+            <Grid Height="53" HorizontalAlignment="Left" Margin="14,195,0,0" Name="grdLessonIV" VerticalAlignment="Top" Width="307" Visibility="Hidden">
                 <Image Height="36" HorizontalAlignment="Left" Margin="10,6,0,0" Name="imgLessonIV" VerticalAlignment="Top" Width="40" />
                 <Label Content="Whisking" FontFamily="Leelawadee" FontSize="20" Height="37" HorizontalAlignment="Left" Margin="71,6,0,0" Name="lblLessonIV" VerticalAlignment="Top" Width="116" />
                 <Button Content="-&gt;" Height="23" HorizontalAlignment="Left" Margin="218,14,0,0" Name="btnLessonIV" VerticalAlignment="Top" Width="75" />
@@ -38,7 +38,7 @@
         <ProgressBar Height="45" HorizontalAlignment="Left" Margin="41,488,0,0" Name="progressBarWhiskingVid" VerticalAlignment="Top" Width="549" Maximum="1500" Value="800" />
         <Label Content="800/ 1500 points"  FontFamily="Leelawadee" FontSize="20" Height="37" HorizontalAlignment="Left" Margin="239,493,0,0" Name="label2" VerticalAlignment="Top" Width="164" />
         <Button Content="Back" Height="53" HorizontalAlignment="Left" Margin="25,594,0,0" Name="btnLesBack" VerticalAlignment="Top" Width="112" Click="btnLesBack_Click" FontFamily="Century Gothic" FontSize="16" />
-        <Label Content="Lessons:" Height="28" HorizontalAlignment="Left" Margin="650,370,0,0" Name="lblLessonsHeader" VerticalAlignment="Top" FontSize="15" />
+        <Label Content="Lessons:" Height="43" HorizontalAlignment="Left" Margin="651,377,0,0" Name="lblLessonsHeader" VerticalAlignment="Top" FontSize="20" FontFamily="Leelawadee" />
     </Grid>
 </UserControl>
 
